<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_14"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:drawableTop="@drawable/unlogined_selector"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/me_register"
                android:textColor="@color/text_color_black_red_selector" />

            <RelativeLayout
                android:id="@+id/logined_rl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/logined_iv"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_dressbook" />

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/logined_iv"
                    android:text="@string/me_logined"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/exit_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:text="@string/exit_btn"
                    android:textColor="@color/black" />

            </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/myOrder_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white">


            <TextView
                android:id="@+id/myOrder_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:drawableLeft="@drawable/my_set_meal_selector"
                android:gravity="left|center_vertical"
                android:text="@string/my_order"
                android:drawableRight="@drawable/arrow_selector"
                android:drawablePadding="10dp"
                android:textColor="@color/text_color_black_red_selector" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manageAddress_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/manageAddress_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:drawableLeft="@drawable/manage_address_selector"
                android:gravity="left|center_vertical"
                android:text="@string/manage_address"
                android:drawableRight="@drawable/arrow_selector"
                android:drawablePadding="10dp"
                android:textColor="@color/text_color_black_red_selector" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/contactWay_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/contactWay_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:drawableLeft="@drawable/contact_way_selector"
                android:gravity="left|center_vertical"
                android:text="@string/contact_way"
                android:drawableRight="@drawable/arrow_selector"
                android:drawablePadding="10dp"
                android:textColor="@color/text_color_black_red_selector" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/modifyPassword_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/modifyPassword_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:drawableLeft="@drawable/modify_password_selector"
                android:gravity="left|center_vertical"
                android:text="@string/modify_password"
                android:drawableRight="@drawable/arrow_selector"
                android:drawablePadding="10dp"
                android:textColor="@color/text_color_black_red_selector" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/updateApp_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white">
            <TextView
                android:id="@+id/updateApp_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:drawableLeft="@drawable/update_app_selector"
                android:gravity="left|center_vertical"
                android:text="@string/update_app"
                android:drawableRight="@drawable/arrow_selector"
                android:drawablePadding="10dp"
                android:textColor="@color/text_color_black_red_selector" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_rl"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/about_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:drawableLeft="@drawable/about_selector"
                android:gravity="left|center_vertical"
                android:text="@string/about"
                android:drawableRight="@drawable/arrow_selector"
                android:drawablePadding="10dp"
                android:textColor="@color/text_color_black_red_selector" />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>