<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/top_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/contactinfo_hint"
        android:textColor="@color/black" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@color/black_14" />

    <RelativeLayout
        android:id="@+id/name_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/prompt_name"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="袁东华"
            android:textColor="@color/black_6"
            android:textSize="18dp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@color/black_14" />

    <RelativeLayout
        android:id="@+id/phone_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/prompt_phone"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/ic_black_right_arrow"
            android:gravity="center"
            android:text="18801123830"
            android:textColor="@color/black_6"
            android:textSize="18dp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@color/black_14" />

    <RelativeLayout
        android:id="@+id/email_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/prompt_email"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/ic_black_right_arrow"
            android:gravity="center"
            android:text="1348474384@qq.com"
            android:textColor="@color/black_6"
            android:textSize="18dp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@color/black_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/contactinfo_hint2"
        android:textColor="@color/black" />
</LinearLayout>